# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  aabb.cpp  aabb.h  ai.txt  bounds.cpp  bounds.h  camera.cpp  camera.h  carpet.txt  color.h  combine_images.cpp  combine_images.h  constants.h  cornell.txt  debug.py  diffuse.cpp  diffuse.h  example.cpp  extract_details.cpp  factorial.cpp  final.cpp  final.txt  fog.cpp  fog.h  fogbox.cpp  fogbox.h  fogsphere.cpp  fogsphere.h  furnace  get_input.cpp  hit.cpp  hit.h  input  input.txt  main.cpp  material.cpp  material.h  matte.txt  (+60 more)
files/meshes/: ball.txt  cord.txt  diamond.txt  hang_light.txt  light.txt  pyramid.txt  rim.txt  stair.txt  tile.txt
files/scene_files/: chess.txt  cornell.txt  cornell2.txt  example.txt  experiment.txt  minecraft.txt  obj_viewer.txt  portal.txt  room.txt  solar_system.txt
